<resources>
    <string name="app_name">MovieViewer</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter_popularity">Popular</string>
    <string name="action_filter_ratings">Ratings</string>
    <string name="action_filter_favorites">Favorites</string>

    <string name="movie_title">Title:</string>
    <string name="movie_rating">Rating:</string>
    <string name="movie_release_date">Release Date:</string>
    <string name="movie_plot_synopsis">Plot Synopsis:</string>
    <string name="movie_rating_denominator">/10.0</string>
    <string name="movie_detail_not_available"> Not available</string>

    <string name="movie_trailer">Trailers</string>
    <string name="movie_reviews">Reviews</string>
    <string name="more_info">More</string>

    <string name="shared_pref_movies_key">sharedPrefMovieKey</string>

</resources>
